--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "seabios"]
 	path = seabios
 	url = https://git.seabios.org/seabios.git
+[submodule "ijg"]
+	path = ijg
+	url = https://github.com/libjpeg-turbo/ijg
